# faster-whisper-server

./: .gitignore  .gitmodules  Alternatively, you can try to run the tests using the following command  Dockerfile.cuda  For example, you can add the following code at the top of the `test_server.py` file  audio.pcm  compose.yaml  frontend.js  pyproject.toml  real_time_transcription_server.py  requirements-all.txt  requirements.txt  setup.bash  stt
examples/live-audio/: script.sh
experiments/: anyio.py  fast.py  main.py  managed.py  new.py  real_time_transcription_server.py  z_whisper.py
experiments/zenoh/: config.json5  z_vision.py
faster_whisper_server/: abstract.py  audio.py  audio_config.py  audio_task.py  colors.py  config.py  cookies.txt  core.py  fast.py  gradio_app.py  logger.py  main.py  new.py  output.txt  processing.py  requirements.txt  simple.py  speech.py  stt.py  test.py  test_stream  transition.py  tts.py  tts_config.json  tts_old.py
faster_whisper_server/agents/: actor.py  agent.py  config.py  fsm.py  instruct_agent.py  speaker_agent.py  whisper_agent.py
faster_whisper_server/tests/: test_typing.py
faster_whisper_server/utils/: colors.py
original/: audio.py  config.py  gradio_app.py  main.py
outs/: out.pcm
tests/: conftest.py  test.py  test_act.py  test_audio_out_stream.py  test_predict.py  test_server.py  test_typing.py
tests/test_fe/: test.py  test_act.py  test_predict.py  test_server.py
