[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faster-whisper-server"
requires-python = ">=3.11,<3.13"
dynamic = ["version"]

dependencies = [
    'aiofiles==23.2.1',
    'altair==5.3.0',
    'annotated-types==0.7.0',
    'anyio==4.4.0',
    'attrs==23.2.0',
    'av==12.2.0',
    'bark==0.1.5',
    'certifi==2024.7.4',
    'cffi==1.16.0',
    'charset-normalizer==3.3.2',
    'click==8.1.7',
    'coloredlogs==15.0.1',
    'contourpy==1.2.1',
    'ctranslate2==4.3.1',
    'cycler==0.12.1',
    'distro==1.9.0',
    'dnspython==2.6.1',
    'email-validator==2.2.0',
    'fastapi==0.111.1',
    'fastapi-cli==0.0.4',
    'faster-whisper==1.0.3',
    'ffmpy==0.3.2',
    'filelock==3.15.4',
    'flatbuffers==24.3.25',
    'fonttools==4.53.1',
    'fsspec==2024.6.1',
    'gradio==4.38.1',
    'gradio-client==1.1.0',
    'h11==0.14.0',
    'httpcore==1.0.5',
    'httptools==0.6.1',
    'httpx==0.27.0',
    'httpx-sse==0.4.0',
    'huggingface-hub==0.24.0',
    'humanfriendly==10.0',
    'idna==3.7',
    'importlib-resources==6.4.0',
    'jinja2==3.1.4',
    'jsonschema==4.23.0',
    'jsonschema-specifications==2023.12.1',
    'kiwisolver==1.4.5',
    'markdown-it-py==3.0.0',
    'markupsafe==2.1.5',
    'matplotlib==3.9.1',
    'mbodied==1.0.9',
    'mdurl==0.1.2',
    'mpmath==1.3.0',
    'numpy==1.26.4',
    'numpy<2.0.0',
    'onnxruntime==1.18.1',
    'openai',
    'orjson==3.10.6',
    'packaging==24.1',
    'pandas==2.2.2',
    'pillow==10.4.0',
    'protobuf==5.27.2',
    'pyannote.audio',
    'pycparser==2.22',
    'pydantic==2.8.2',
    'pydantic-core==2.20.1',
    'pydantic-settings==2.3.4',
    'pydub==0.25.1',
    'pygments==2.18.0',
    'pyparsing==3.1.2',
    'python-dateutil==2.9.0.post0',
    'python-dotenv==1.0.1',
    'python-multipart==0.0.9',
    'pytz==2024.1',
    'pyyaml==6.0.1',
    'referencing==0.35.1',
    'requests==2.32.3',
    'rich==13.7.1',
    'rpds-py==0.19.0',
    'ruff==0.5.3',
    'semantic-version==2.10.0',
    'setuptools==71.0.4',
    'shellingham==1.5.4',
    'six==1.16.0',
    'sniffio==1.3.1',
    'soundfile==0.12.1',
    'starlette==0.37.2',
    'sympy==1.13.1',
    'tokenizers==0.19.1',
    'tomlkit==0.12.0',
    'toolz==0.12.1',
    'tqdm==4.66.4',
    'typer==0.12.3',
    'typing-extensions==4.12.2',
    'tzdata==2024.1',
    'urllib3==2.2.2',
    'uvicorn==0.30.1',
    'uvloop==0.19.0',
    'watchfiles==0.22.0',
    'websockets==11.0.3',
]
[project.optional-dependencies]
dev = ["ruff==0.5.3", "pytest", "webvtt-py", "srt", "basedpyright"]
other = ["youtube-dl @ git+https://github.com/ytdl-org/youtube-dl.git@37cea84f775129ad715b9bcd617251c831fcc980", "aider-chat==0.39.0"]
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
"FIX",
"TD", # disable todo warnings
"ERA",  # allow commented out code
"PTH",

"ANN003", # missing kwargs
"ANN101", # missing self type
"ANN102", # missing cls
"B006",
"B008",
"COM812", # trailing comma
"D10",  # disabled required docstrings
"D401",
"EM102",
"FBT001",
"FBT002",
"PLR0913",
"PLR2004", # magic
"RET504",
"RET505",
"RET508",
"S101", # allow assert
"S104",
"S603", # subprocess untrusted input
"SIM102",
"T201", # print
"TRY003",
"W505",
"ISC001" # recommended to disable for formatting
]
[tool.hatch.version]
path = "info/__about__.py"
[tool.hatch.envs.default]
python = "3.12"
path = ".venv"

[tool.hatch.metadata]
allow-direct-references = true
[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
pythonPlatform = "Linux"
# https://github.com/DetachHead/basedpyright?tab=readme-ov-file#pre-commit-hook
venvPath = "."
venv = ".venv"
